samples/_failures_safe/1761508325_09e445_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e5bd7cda.c: In function ‘print_state_machine’:
./samples/SAFE/__tmp_e5bd7cda.c:140:12: error: missing terminating " character
  140 |     printf("Current State
      |            ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_e5bd7cda.c:140:5: error: expected expression at end of input
  140 |     printf("Current State
      |     ^~~~~~
./samples/SAFE/__tmp_e5bd7cda.c:140:5: error: expected declaration or statement at end of input
